src/test/ui/borrowck/reassignment_immutable_fields.stderr
error[E0381]: assign to part of possibly uninitialized variable: `x`
  --> $DIR/reassignment_immutable_fields.rs:7:5
   |
LL |     x.0 = 1;
   |     ^^^^^^^ use of possibly uninitialized `x`

error[E0381]: assign to part of possibly uninitialized variable: `x`
  --> $DIR/reassignment_immutable_fields.rs:15:5
   |
LL |     x.0 = 1;
   |     ^^^^^^^ use of possibly uninitialized `x`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0381`.
